# pqc-fips

./: Cargo.toml  README.md  SECURITY.md  run_tests.sh
benches/: benchmarks.rs
docs/: FIPS_140_3_SECURITY_POLICY.md  FIPS_140_3_USER_GUIDE.md  OSS_FUZZ_INTEGRATION.md  Performance_benchmarks.md  TESTING_GUIDE.md
docs/archive/: COMPILATION_FIXES.md  FILE_MANIFEST.md  FINAL_FIX_SUMMARY.md  QUICK_FIX.md  START_HERE.md  TESTING_IMPLEMENTATION_COMPLETE.md
docs/development/: IMPLEMENTATION_COMPLETE.md  KAT_IMPLEMENTATION_SUMMARY.md  LIBCRUX_API_REFERENCE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_aes_gcm.rs  fuzz_dilithium_keys.rs  fuzz_dilithium_structured.rs  fuzz_encapsulation.rs  fuzz_kyber_keys.rs  fuzz_kyber_structured.rs  fuzz_pct.rs  fuzz_signiture.rs  fuzz_state_machine.rs
src/: cast.rs  csp.rs  error.rs  kat_dilithium.rs  kat_kyber.rs  lib.rs  pct.rs  preop.rs  rng.rs  state.rs
tests/: cast_tests.rs  cross_validation.rs  fips_140_3.rs  integration.rs  property_tests.rs
